# Ra3Copilot

./: .env.example  .gitignore  build_exe.ps1  package-lock.json  package.json
src/: .gitignore  README.md  __main__.py  main.py  pyproject.toml
src/core/: agents.py  checkpointer.py  context.py  context_usage.py  model.py  runtime_env.py
src/core/agents/: project_instructions.py  project_skills.py  ra3_csharp_writer.py  universal.py
src/core/callback/: debug_print.py
src/core/mcp/: ra3_companion.py
src/core/middlewares/: configurable_model.py  project_context.py
src/core/prompts/agents/: ra3_csharp_writer.md
src/core/prompts/skills/map-analyser/: SKILL.md
src/core/prompts/skills/ra3_map_csharp/: SKILL.md
src/core/skills/csharp_runner/: SKILL.md
src/core/tools/: ra3_companion.py
src/core/user_data/: __init__.py  config.py  history.py  project_files.py  projects.py  provider.py  usage.py  workspace_config.py
src/daemon/: __init__.py  __main__.py  agent_loop.py  locking.py  qq_bot.py  runtime.py  server.py  supervisor.py
src/daemon/api/: __init__.py  context.py  files.py  history.py  projects.py  protocol.py  runs.py  settings.py  terminal.py  usage.py
src/desktop/: __init__.py  app.py  daemon_client.py  tray.py
src/desktop/web/: index.html
src/tests/: test_assistant_settings.py  test_context_usage.py  test_daemon_security.py  test_project_files_delete.py  test_project_instructions.py  test_projects.py  test_qq_bot.py  test_run_policy.py  test_soul_settings.py  test_terminal_api.py  test_todo_events.py
src/tui/: app.py
(+3 files in other folders)
