[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.8",
    "langchain>=1.3.4",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "httpx>=0.28.1",
    "textual>=8.2.7",
    "pywebview>=5.4",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.14.1",
]
