[project]
name = "ra3-copilot"
version = "0.2.0"
description = "Ra3Copilot - 本地 RA3 地图开发 Agent 工作台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.8",
    "langchain>=1.3.4",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "httpx>=0.28.1",
    "textual>=8.2.7",
    "pywebview>=5.4",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pystray>=0.19.5",
    "pillow>=10.0.0",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.14.1",
]
